<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.activity.CalculoIMCActivity">


    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginTop="45sp"
        android:text="Olá, Marcos Renann"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tvIntroIMC"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvIntroIMC"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4sp"
        android:layout_marginBottom="4sp"
        android:text="@string/introIMC"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/tilPeso"
        app:layout_constraintEnd_toEndOf="@id/tilPeso"
        app:layout_constraintTop_toBottomOf="@id/tvHello"
        app:layout_constraintBottom_toTopOf="@id/tilPeso"/>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPeso"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:hint="@string/peso"
        app:helperText="@string/putPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvIntroIMC"
        app:layout_constraintBottom_toTopOf="@+id/tilAlura"
        app:suffixText="@string/kg">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietPeso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"
            />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilAlura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:hint="@string/altura"
        app:helperText="@string/putAltura"
        app:layout_constraintEnd_toEndOf="@id/tilPeso"
        app:layout_constraintStart_toStartOf="@id/tilPeso"
        app:layout_constraintTop_toBottomOf="@+id/tilPeso"
        app:layout_constraintBottom_toTopOf="@id/btCalcular"
        app:suffixText="@string/metros"
       >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietAltura"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:inputType="numberDecimal"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btCalcular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tilPeso"
        app:layout_constraintStart_toStartOf="@id/tilPeso"
        app:layout_constraintTop_toBottomOf="@id/tilAlura"
        android:layout_marginTop="67sp"
        android:background="@drawable/custom_button"
        />



</androidx.constraintlayout.widget.ConstraintLayout>